--- a/Jemepresente/onepge.html
+++ b/Jemepresente/onepge.html
@@ -14,20 +14,27 @@
 
 <h1>Présentation de France Gaudet</h1>
 
+<section id="menu">
+    <a href="#Mes études"><h2>Descendre a Mes études</h2></a>
+</section>
+<section id="menu">
+    <a href="#Mes sports"><h2>Descendre a Mes sports</h2></a>
+</section>
+<section id="menu">
+<a href="#Mes Loisirs"><h2>Descendre a Mes loisirs</h2></a>
+</section>
+<section id="menu">
+<a href="#Mes rêves"><h2>Descendre a Mes Rêves</h2></a>
+</section>
+
 <img src="img/moi.jpg" height="200" width="150"/>
 
-<a href="mes etudes.html"><h2>Mes études </h2></a>
 
 
-<a href="Mes%20sports.html"><h2>Mes sports </h2></a>
-
-
-<a href="mes loisirs.html"><h2>Mes loisirs </h2></a>
-
-<a href="mes rêves.html"><h2>Mes reves </h2></a>
-
+<section id="mes études"></section>
 
 <h1>Mes études</h1>
+
 <p>Je possede un permis du BSP je suis presentement entrain de faire un AEC en Cyberenquete et je tenais a terminer mon AEC en IntegrationWeb commencé et abadonné en 2013</p>
 
 
@@ -87,9 +94,9 @@
     <br>
     <br>
     <br>
-    <a href="index.html">Cliquer ici pour revenir à la page d'acceuil</a>
+    <a href="#menu">Cliquer ici pour revenir en haut de la page</a>
 
-
+    <section id="Mes sports"></section>
     <h1>Mes sports</h1>
     <p>Je ne suis pas tres "sports"</p>
 
@@ -119,9 +126,9 @@
     </table>
     <br>
 
-    <a href="index.html">Cliquer ici pour revenir à la page d'acceuil</a>
+    <a href="#menu">Cliquer ici pour revenir en haut de la page</a>
 
-
+    <section id="Mes Loisirs"></section>
     <h1>Mes loisirs</h1>
     <p>J'adore peindre, lire, écrire</p>
 
@@ -139,9 +146,9 @@
     </ol>
     <br>
     <br>
-    <a href="index.html">Cliquer ici pour revenir à la page d'acceuil</a>
+    <a href="#menu">Cliquer ici pour revenir en haut de la page</a>
 
-
+    <section id="Mes rêves"></section>
     <h1>Mes reves</h1>
     <p>Reussir tous les niveaux a CandyCrushFriends</p>
 
@@ -150,7 +157,7 @@
     <br>
     <br>
     <br>
-    <a href="index.html">Cliquer ici pour revenir à la page d'acceuil</a>
+    <a href="#menu">Cliquer ici pour revenir en haut de la page</a>
 
 </body>
 
